<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    tools:context=".MainActivity"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/equation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:scrollHorizontally="true"
            android:textAlignment="textEnd"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:scrollHorizontally="true"
            android:textAlignment="textEnd"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2">

        <Button
            android:id="@+id/back"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:text="@string/back"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/simple"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:text="@string/simple_mode"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/bCE"
                android:layout_width="72dp"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/mybutton"
                android:minWidth="100dp"
                android:minHeight="80dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/ce"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bC"
                android:layout_width="72dp"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/mybutton"
                android:minWidth="100dp"
                android:minHeight="80dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/c"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b_plus_minus"
                android:layout_width="72dp"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/mybutton"
                android:minWidth="100dp"
                android:minHeight="80dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/b_plus_minu"
                android:textAlignment="center"
                android:textSize="35sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sin"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/sin"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,DuplicateIds" />

            <Button
                android:id="@+id/cos"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/cos"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/tan"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/tan"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/ln"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/ln"
                android:textAlignment="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sqrt"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/sqrt"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/pow"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/pow2"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/pi"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/pow"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/e"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/log"
                android:textAlignment="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b7"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b8"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b9"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b_diff"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b_diff"
                android:textAlignment="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b4"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b5"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b6"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b_multiply"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b_multiply"
                android:textAlignment="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b1"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/b2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b2"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b3"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b_substract"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b_substract"
                android:textAlignment="center"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b0"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/b_"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b_dot"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b_equals"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b_equals"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b_add"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybutton"
                android:elevation="0dp"
                android:text="@string/b_addition"
                android:textAlignment="center"
                android:textSize="24sp" />

        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>